--- a/ecommerce/Hello_World/package.json
+++ b/ecommerce/Hello_World/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "ecommerce",
+  "name": "hello_world",
   "version": "1.0.0",
-  "main": "helloWorld.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "commonjs",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
     "express": "^4.21.2"
   }
 }
